plugins {
    id 'java'
}

ext {
    gdxVersion = '1.10.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
    implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

sourceCompatibility = 1.8

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/"]
sourceSets.main.resources.srcDirs = ["../assets"]
project.ext.assetsDir = new File("../assets")

test {
    jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
}
